--- a/TODOApplication/app/src/main/res/values/strings.xml
+++ b/TODOApplication/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
         TODO List goes here
     </string>
     <string name="action_settings">Settings</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
